RESOLVED FIXED 106128
HTMLTreeBuilder should ASSERT that it is on the main thread before touching elements
https://bugs.webkit.org/show_bug.cgi?id=106128
Summary HTMLTreeBuilder should ASSERT that it is on the main thread before touching e...
Adam Barth
Reported 2013-01-04 13:09:38 PST
HTMLTreeBuilder should ASSERT that it is on the main thread before touching elements
Attachments
Patch (2.25 KB, patch)
2013-01-04 13:10 PST, Adam Barth
no flags
Adam Barth
Comment 1 2013-01-04 13:10:51 PST
Eric Seidel (no email)
Comment 2 2013-01-04 13:11:54 PST
Comment on attachment 181364 [details] Patch OK.
WebKit Review Bot
Comment 3 2013-01-04 14:19:46 PST
Comment on attachment 181364 [details] Patch Clearing flags on attachment: 181364 Committed r138855: <http://trac.webkit.org/changeset/138855>
WebKit Review Bot
Comment 4 2013-01-04 14:19:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.